new repository for cas server

--- a/lib/casserver/views/layout.erb
+++ b/lib/casserver/views/layout.erb
@@ -14,5 +14,6 @@
 
   <body onload="if (document.getElementById('username')) document.getElementById('username').focus()">
     <%= yield %>
+<!--    <span id="siteseal"><script type="text/javascript" src="https://seal.starfieldtech.com/getSeal?sealID=qLxAhkaxOHM5cWk92WetqtnoDR4ZoEGpMZ1Y9kF0OIOhGHgGykDlFmLcQO"></script><br/><a style="font-family: arial; font-size: 9px" href="http://www.starfieldtech.com" target="_blank">SSL Cert</a></span> -->
   </body>
 </html>
