--- a/lib/casserver/views/_login_form.erb
+++ b/lib/casserver/views/_login_form.erb
@@ -1,25 +1,25 @@
 <%# coding: UTF-8 -%>
 <form method="post" action="<%= @form_action || "login" %>" id="login-form"
       onsubmit="submitbutton = document.getElementById('login-submit'); submitbutton.value='<%= _("Please wait...") %>'; submitbutton.disabled=true; return true;">
-  <table id="form-layout">
+  <table id="form-layout" class="overview">
     <tr>
-      <td id="username-label-container">
+      <td id="username-label-container" class="label">
         <label id="username-label" for="username">
           <%= _("Username") %>
         </label>
       </td>
-      <td id="username-container">
+      <td id="username-container" class="value">
         <input type="text" id="username" name="username"
                size="32" tabindex="1" accesskey="u" />
       </td>
     </tr>
     <tr>
-      <td id="password-label-container">
+      <td id="password-label-container" class="label">
         <label id="password-label" for="password">
           <%= _("Password") %>
         </label>
       </td>
-      <td id="password-container">
+      <td id="password-container" class="value">
         <input type="password" id="password" name="password"
                size="32" tabindex="2" accesskey="p" autocomplete="off" />
       </td>
