--- a/lib/casserver/views/login.erb
+++ b/lib/casserver/views/login.erb
@@ -1,52 +1,34 @@
-<%# coding: UTF-8 -%>
-<h1>
-  <%= @organization %>
-</h1>
-<div id="left">
-  <strong> Welcome to the Alumni Portal</strong><br/>
-  This is the central login facility for the Alumni Portal.<br/> 
-  After logging in here you can access all the different parts of the portal. 
-  <ol>
-    <li>
-    <h2>Log In</h2>
-    Enter your login details to log in to the portal.
-    </li>
-    <li>
-    <h2> Don't have an account? </h2> 
-    Go to the link below to sign up for an account now! 
-    <br/>
-    <a href="https://alumni.iitkgp.org/signup"> Sign Up</a>
-    </li>
-    <li>
-    <h2> Troubleshooting</h2>
-    <p>
-    Having trouble logging in. What seems to be the problem?
-    </p>
+<div style="padding:50px;">
+  <div id="right" class="login">
+    <h1 style="padding:10px;border:0px;background-color:#FDFED8;width:480px">Login into Alumni Portal</h1>
 
-    <ul>
-    <li><a href="https://alumni.iitkgp.org/users/forgot_password"> I don't remember my password</a></li>
-    <li><a href="https://alumni.iitkgp.org/users/forgot_login">I forgot my login, but I know my email</a></li>
-    <li><a href="https://alumni.iitkgp.org/users/cluelsess">I don't remember my login, email or password!</a></li>
-    </ul>
-    </li>
-  </ol>
-</div>
-<div id="right" class="login">
-<table class="overview">
-  <% if @message %>
-  <tr>
-    <td colspan="2" id="messagebox-container">
-      <div class="messagebox <%= @message[:type] %>">
+    <div class="messagebox mistake <%= @message ? "" : "notvisible" %>">
+      <% if @message %>
         <%= @message[:message] %>
-      </div>
-    </td>
-  </tr>
-  <% end %>
+      <% end %>
+    </div>
 
-  <tr>
-    <td id="login-form-container">
-      <%= erb(:_login_form, :layout => false) %>
-    </td>
-  </tr>
-</table>
+    <form method="post" action="<%= @form_action || "login" %>" id="login-form"
+      onsubmit="submitbutton = document.getElementById('login-submit'); submitbutton.value='<%= _("Please wait...") %>'; submitbutton.disabled=true; return true;">
+      <div style="float:right;margin-right:10px;">
+        <a href="https://alumni.iitkgp.org/signup">First time? Signup!</a>
+        <a href="https://alumni.iitkgp.org/users/forgot_password">Forgot your password?</a>
+        <a href="https://alumni.iitkgp.org/users/forgot_login">Forgot your username?</a>
+        <a href="https://alumni.iitkgp.org/users/cluelsess">Can't remember anything?</a>
+      </div>
+
+      <div class="label">Username</div>
+      <input type="text" id="username" name="username" size="32" tabindex="1" accesskey="u" />
+
+      <br/><br/>
+      <div class="label">Password</div>
+      <input type="password" id="password" name="password" size="32" tabindex="2" accesskey="p" autocomplete="off" />
+
+      <input type="hidden" id="lt" name="lt" value="<%= @lt %>" />
+      <input type="hidden" id="service" name="service" value="<%= @service %>" />
+      <br/><br/><br/>
+      <input type="submit" class="button" accesskey="l" value="<%= _("Login") %>" tabindex="4" id="login-submit" />
+      <br/><br/><br/>
+    </form>
+  </div>
 </div>
